FILE(GLOB SRC_FILES *.cpp )
FILE(GLOB HDR_FILES *.h )

IF( ${DEBUG_LEVEL} GREATER 0 )
SET_SOURCE_FILES_PROPERTIES(
  ${SRC_FILES}
  COMPILE_FLAGS -DDL${DEBUG_LEVEL})
ENDIF( ${DEBUG_LEVEL} GREATER 0 )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/src/sharedclasses )
QT_WRAP_CPP(aipsgui QT_MOC_SRCS ${HDR_FILES})
ADD_EXECUTABLE(aipsgui ${SRC_FILES} ${QT_MOC_SRCS})
TARGET_LINK_LIBRARIES( aipsgui )
INSTALL_TARGETS(/bin aipsgui)