FILE(GLOB SRC_FILES *.cpp )

IF( ${DEBUG_LEVEL} GREATER 0 )
SET_SOURCE_FILES_PROPERTIES(
  ${SRC_FILES}
  COMPILE_FLAGS -DDL${DEBUG_LEVEL})
ENDIF( ${DEBUG_LEVEL} GREATER 0 )

ADD_EXECUTABLE(evaltool ${SRC_FILES})
INSTALL_TARGETS(/bin evaltool)
TARGET_LINK_LIBRARIES(evaltool aipsbase aipsfilehandlers)