FILE(GLOB SRC_FILES *.cpp )
FILE(GLOB HDR_FILES *.h )

IF( ${DEBUG_LEVEL} GREATER 0 )
SET_SOURCE_FILES_PROPERTIES(
  ${SRC_FILES}
  COMPILE_FLAGS -DDL${DEBUG_LEVEL})
ENDIF( ${DEBUG_LEVEL} GREATER 0 )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/src )
QT_WRAP_CPP(meshsegmenter QT_MOC_SRCS ${HDR_FILES})
ADD_EXECUTABLE(meshsegmenter ${SRC_FILES} ${QT_MOC_SRCS} )
INSTALL_TARGETS(/bin meshsegmenter)
