FILE(GLOB SRC_FILES *.cpp )
FILE(GLOB HDR_FILES *.h )

IF( ${DEBUG_LEVEL} GREATER 0 )
SET_SOURCE_FILES_PROPERTIES(
  ${SRC_FILES}
  COMPILE_FLAGS -DDL${DEBUG_LEVEL})
ENDIF( ${DEBUG_LEVEL} GREATER 0 )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/src/sharedclasses 		
	${PROJECT_SOURCE_DIR}/src/fieldfilters )
ADD_LIBRARY(aipsfieldfilters MODULE  ${SRC_FILES})
INSTALL_TARGETS(/lib aipsfieldfilters)
INSTALL_FILES(/include/aipsfieldfilters .h ${HDR_FILES} )
